src/objects/Opportunity/fields/A_C_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>A_C_Product_Status__c</fullName>
    <label>A/C Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Established</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>