src/objects/Opportunity/fields/A_LICENSED_SW__c.field-meta.xml
<CustomField>
    <fullName>A_LICENSED_SW__c</fullName>
    <label>A (LICENSED SW)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Supercede</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>