src/objects/Opportunity/fields/Account_CBT__c.field-meta.xml
<CustomField>
    <fullName>Account_CBT__c</fullName>
    <formula>TEXT( Account.CBT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CBT</label>
    <type>Text</type>
</CustomField>