src/objects/Opportunity/fields/Account_CBT_Directorate__c.field-meta.xml
<CustomField>
    <fullName>Account_CBT_Directorate__c</fullName>
    <formula>TEXT( Account.CBT_Directorate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CBT Directorate</label>
    <type>Text</type>
</CustomField>