src/objects/Opportunity/fields/Account_CBT_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_CBT_Team__c</fullName>
    <description>Health Check Sprint5&amp;6</description>
    <formula>TEXT(Account.CBT_Team__c)</formula>
    <label>Account CBT Team</label>
    <type>Text</type>
</CustomField>