src/objects/Opportunity/fields/Account_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the applicable Account or End User contact name</inlineHelpText>
    <label>Customer Contact Name</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contact must be from the Account</errorMessage>
        <filterItems>
            <field>Contact.Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Account Contact Name)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>