src/objects/Opportunity/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>This field is used for coding purpose</description>
    <label>Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>