src/objects/Opportunity/fields/Account_manager_review__c.field-meta.xml
<CustomField>
    <fullName>Account_manager_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account manager review Complete</label>
    <type>Checkbox</type>
</CustomField>