src/objects/Opportunity/fields/Account_manager_review_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_manager_review_Date__c</fullName>
    <label>Account manager review Complete Date</label>
    <type>Date</type>
</CustomField>