src/objects/Opportunity/fields/Account_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_formula__c</fullName>
    <description>This is for Coding Purpose.</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name formula</label>
    <type>Text</type>
</CustomField>