src/objects/Opportunity/fields/Accountt_Manager_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Accountt_Manager_Review_Comments__c</fullName>
    <label>Account Manager Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>