src/objects/Opportunity/fields/Add_reference_material__c.field-meta.xml
<CustomField>
    <fullName>Add_reference_material__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For updating Related customer stories</description>
    <label>Add reference material</label>
    <type>Checkbox</type>
</CustomField>