src/objects/Opportunity/fields/Agmt_Subject_to_Export_Control__c.field-meta.xml
<CustomField>
    <fullName>Agmt_Subject_to_Export_Control__c</fullName>
    <label>Agmt Subject to Export Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>