src/objects/Opportunity/fields/Agmts_Contains_Export_Controlled_Data__c.field-meta.xml
<CustomField>
    <fullName>Agmts_Contains_Export_Controlled_Data__c</fullName>
    <label>Agmts Contains Export Controlled Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>