src/objects/Opportunity/fields/AGREEMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE__c</fullName>
    <label>AGREEMENT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Consent to finance</fullName>
            </value>
            <value>
                <fullName>Consent to transfer</fullName>
            </value>
            <value>
                <fullName>Copyright Agreement</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>Eng Campaign</fullName>
            </value>
            <value>
                <fullName>Engineering Eval</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Miltary/Government</fullName>
            </value>
            <value>
                <fullName>PIA/NDA</fullName>
            </value>
            <value>
                <fullName>Standard App license</fullName>
            </value>
            <value>
                <fullName>Technical Services Agreement</fullName>
            </value>
            <value>
                <fullName>Training materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>