src/objects/Opportunity/fields/Aircraft_Platform__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Platform__c</fullName>
    <label>Aircraft Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A320</fullName>
            </value>
            <value>
                <fullName>A320 NEO</fullName>
            </value>
            <value>
                <fullName>A330</fullName>
            </value>
            <value>
                <fullName>A330 NEO</fullName>
            </value>
            <value>
                <fullName>A320/A330</fullName>
            </value>
            <value>
                <fullName>A330 / 340</fullName>
            </value>
            <value>
                <fullName>A320 / 330 / 340</fullName>
            </value>
            <value>
                <fullName>A340</fullName>
            </value>
            <value>
                <fullName>A350</fullName>
            </value>
            <value>
                <fullName>A380</fullName>
            </value>
            <value>
                <fullName>ARJ21</fullName>
            </value>
            <value>
                <fullName>ATR42</fullName>
            </value>
            <value>
                <fullName>ATR72</fullName>
            </value>
            <value>
                <fullName>AW-139</fullName>
            </value>
            <value>
                <fullName>B737</fullName>
            </value>
            <value>
                <fullName>B737MAX</fullName>
            </value>
            <value>
                <fullName>B737NG</fullName>
            </value>
            <value>
                <fullName>B747-400</fullName>
            </value>
            <value>
                <fullName>B747-8</fullName>
            </value>
            <value>
                <fullName>B757</fullName>
            </value>
            <value>
                <fullName>B767</fullName>
            </value>
            <value>
                <fullName>B757 / 767</fullName>
            </value>
            <value>
                <fullName>B777</fullName>
            </value>
            <value>
                <fullName>B777X</fullName>
            </value>
            <value>
                <fullName>B787</fullName>
            </value>
            <value>
                <fullName>Bell 412</fullName>
            </value>
            <value>
                <fullName>C-130</fullName>
            </value>
            <value>
                <fullName>C-5</fullName>
            </value>
            <value>
                <fullName>C919</fullName>
            </value>
            <value>
                <fullName>CH-47</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>