src/objects/Opportunity/fields/Aircraft_Ref__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Name</label>
    <referenceTo>Fleet_Asset_Detail__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>