src/objects/Opportunity/fields/Allocation_13__c.field-meta.xml
<CustomField>
    <fullName>Allocation_13__c</fullName>
    <label>Allocation %-13</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>