src/objects/Opportunity/fields/Amount_Net_rollup__c.field-meta.xml
<CustomField>
    <fullName>Amount_Net_rollup__c</fullName>
    <description>Sum of Extended Total Price Net on all Opportunity Products.</description>
    <inlineHelpText>Sum of Extended Total Price Net on all Opportunity Products.</inlineHelpText>
    <label>Amount Net</label>
    <summarizedField>OpportunityLineItem.Amount_Net__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>