src/objects/Opportunity/fields/Amount_op__c.field-meta.xml
<CustomField>
    <fullName>Amount_op__c</fullName>
    <formula>TEXT(Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount_op</label>
    <type>Text</type>
</CustomField>