src/objects/Opportunity/fields/Annualized_Revenue_Years_SIP__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue_Years_SIP__c</fullName>
    <label>Annualized Revenue Years SIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>