src/objects/Opportunity/fields/Appendix_Review_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Appendix_Review_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appendix Review Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HIPI</relationshipName>
    <type>Lookup</type>
</CustomField>