src/objects/Opportunity/fields/Appendix_Review_Engineer_Name__c.field-meta.xml
<CustomField>
    <fullName>Appendix_Review_Engineer_Name__c</fullName>
    <label>Appendix Review Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>