src/objects/Opportunity/fields/Are_Patents_Involved__c.field-meta.xml
<CustomField>
    <fullName>Are_Patents_Involved__c</fullName>
    <label>Are Patents Involved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>