src/objects/Opportunity/fields/ATN_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>ATN_Approval_Date__c</fullName>
    <label>ATN Approval Date</label>
    <type>Date</type>
</CustomField>