src/objects/Opportunity/fields/ATP_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>ATP_Approval_Date__c</fullName>
    <label>ATP Approval Date</label>
    <type>Date</type>
</CustomField>