src/objects/Opportunity/fields/ATR_Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ATR_Actual_Close_Date__c</fullName>
    <inlineHelpText>This field will be deleted on standardization of Closed Date Field.</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>