src/objects/Opportunity/fields/ATR_Agent_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ATR_Agent_Commission_Percentage__c</fullName>
    <label>Agent Commission / Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>