src/objects/Opportunity/fields/ATR_Aircraft_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ATR_Aircraft_Quantity__c</fullName>
    <label>Aircraft Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>