src/objects/Opportunity/fields/ATR_Annual_Flight_Hours__c.field-meta.xml
<CustomField>
    <fullName>ATR_Annual_Flight_Hours__c</fullName>
    <label>Annual Flight Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>