src/objects/Opportunity/fields/ATR_Base__c.field-meta.xml
<CustomField>
    <fullName>ATR_Base__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Base %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>