src/objects/Opportunity/fields/ATR_Escalation__c.field-meta.xml
<CustomField>
    <fullName>ATR_Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cap at x% with 50/50</fullName>
            </value>
            <value>
                <fullName>Fixed for Program Term</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>