src/objects/Opportunity/fields/ATR_Growth__c.field-meta.xml
<CustomField>
    <fullName>ATR_Growth__c</fullName>
    <formula>100- ATR_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>