src/objects/Opportunity/fields/ATR_Initial_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>ATR_Initial_Provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Provisioning</label>
    <type>Checkbox</type>
</CustomField>