src/objects/Opportunity/fields/ATR_Opportunity_Type_Convert__c.field-meta.xml
<CustomField>
    <fullName>ATR_Opportunity_Type_Convert__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>ATR Opportunity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>