src/objects/Opportunity/fields/ATR_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ATR_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net Thirty Days(N30)</fullName>
                <default>true</default>
                <label>Net Thirty Days(N30)</label>
            </value>
            <value>
                <fullName>Non-standard</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>