src/objects/Opportunity/fields/ATR_Probability__c.field-meta.xml
<CustomField>
    <fullName>ATR_Probability__c</fullName>
    <inlineHelpText>INFO ONLY: This field is read only and preserves the legacy probability value. User must populate the PWin field for the opportunity to progress.</inlineHelpText>
    <label>Estimated Win Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>