src/objects/Opportunity/fields/ATR_Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>ATR_Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGMT</fullName>
            </value>
            <value>
                <fullName>PROP</fullName>
            </value>
            <value>
                <fullName>GEN</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>FFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>