src/objects/Opportunity/fields/ATR_Proposal_Validity__c.field-meta.xml
<CustomField>
    <fullName>ATR_Proposal_Validity__c</fullName>
    <label>Proposal Validity</label>
    <type>Date</type>
</CustomField>