src/objects/Opportunity/fields/ATR_Review_Org__c.field-meta.xml
<CustomField>
    <fullName>ATR_Review_Org__c</fullName>
    <label>Review Org</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>Avionics &amp; Lighting Services</fullName>
            </value>
            <value>
                <fullName>Avionics LRU</fullName>
            </value>
            <value>
                <fullName>Mechanical Components</fullName>
            </value>
            <value>
                <fullName>Propulsion</fullName>
            </value>
            <value>
                <fullName>Wheels &amp; Brakes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>