src/objects/Opportunity/fields/ATR_RFP__c.field-meta.xml
<CustomField>
    <fullName>ATR_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP</label>
    <type>Checkbox</type>
</CustomField>