src/objects/Opportunity/fields/ATR_Unique_C_PS_or_ISC_Requirements__c.field-meta.xml
<CustomField>
    <fullName>ATR_Unique_C_PS_or_ISC_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique C&amp;PS or ISC Requirements</label>
    <type>Checkbox</type>
</CustomField>