src/objects/Opportunity/fields/Attorney_SBG__c.field-meta.xml
<CustomField>
    <fullName>Attorney_SBG__c</fullName>
    <label>Attorney SBG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AER</fullName>
                <default>true</default>
                <label>AER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>